Fix spacing css warnings

--- a/style.css
+++ b/style.css
@@ -153,15 +153,16 @@ body {
 .card-footer {
   display: flex;
   align-items: center;
-  gap: 16px;
   > .footer-image {
-    width: 33px;
-    height: 33px;
-    border-radius: 50%;
-    border: 1px solid var(--white);
+    gap: 16px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     > img {
-      width: 100%;
-      height: 100%;
+      border: 1px solid var(--white);
+      border-radius: 50%;
+      width: 33px;
+      height: 33px;
     }
   }
 
